5.0.22

NEW
    - Added raid aura tooltips and ignoring auras by shift+right clicking on them while not in combat
    - Added a tooltip showing money of characters on the same faction+realm to the bag money text

FIXES
    - Fixed bank and reagent bank sorting giving error message or not working at all


5.0.21

FIXES
    - Fix lua error in arena


5.0.20

NEW
    - Added warfront ressources


5.0.19

FIXES
    - In-depth fix for the ItemButton API change

5.0.18

FIXES
    - This is a bandaid fix for the ItemButton API change; for now items have unsightly ilvl
      borders and the equipment selection tool doesn't show icons properly until a more
      in-depth fix is available


5.0.17

NEW
    - Added option to show healthvalues on raidframes
    - Added itemlevel to Hero window

FIXES
    - Improved performance of displaying raid auras (~10x) to prevent stuttering in large raids
    - Re-enabled updating raid frames when the party/raid changes during combat
    - Party frames should display names properly


5.0.16

NEW
    - Added option to show target average item level instead of prestige level
    - Added "Edit" button to equipment sets to change name and icon
    - Raid aura indicators now show stack count for auras with more than one stack
    - Added Paragon pending reward icon

FIXES
    - Fixed text of equipment set save and delete dialog
    - Fixed raid frame positioning problem happening since 8.1
    - Fixed reagent bank sizing
    - Fixed ready check for party frames
    
MISCELLANEOUS
    - Changed shaman raid indicator colors to match the spell icon colors


5.0.15

MISCELLANEOUS
    - Update TOC version to 8.1

5.0.14

FIXED
    - Fix an error with the custom UI in Arathi Basin BG (and Brawl version)
    - Jaina is now visible when using the immersive quest view in War Campaign quests


5.0.13

NEW
    - Add background imagery to reputation entries (BC, Classic, Others)

FIXED
    - Added middle mouse button to party and raidframes