@@ -219,6 +219,7 @@ GW_DEFAULT["RAID_CONT_WIDTH"] = 0
 GW_DEFAULT["RAID_CONT_HEIGHT"] = 0
 GW_DEFAULT["RAID_ONLY_DISPELL_DEBUFFS"] = false
 GW_DEFAULT["RAID_SORT_BY_ROLE"] = true
+GW_DEFAULT["RAID_AURA_TOOLTIP_IN_COMBAT"] = true
 GW_DEFAULT["RAID_UNIT_HEALTH"] = "NONE"
 
 GW_DEFAULT["HUD_SCALE"] = 1
