@@ -153,6 +153,8 @@ GwLocalization["RAID_PREVIEW"] = "Schlachtzugsvorschau"
 GwLocalization["RAID_PREVIEW_DESC"] = "Zeige/Verberge die Vorschau des Schlachtzugsfenders und durchlaufe verschiedene Gruppengrößen."
 GwLocalization["RAID_SORT_BY_ROLE"] = "Sortiere Schlachtzug nach Rolle"
 GwLocalization["RAID_SORT_BY_ROLE_DESC"] = "Sortiere Einheitenfenster in Schlachtzügen nach Rolle (Tank, Heiler, Schaden) anstatt nach Gruppe."
+GwLocalization["RAID_AURA_TOOLTIP_IN_COMBAT"] = "Zeige Aura-Tooltips auch im Kampf"
+GwLocalization["RAID_AURA_TOOLTIP_IN_COMBAT_DESC"] = "Zeige Tooltips von Buffs und Debuffs auch im Kampf."
 GwLocalization["RAID_UNIT_FLAGS"] = "Zeige Länderflaggen"
 GwLocalization["RAID_UNIT_FLAGS_2"] = "Nur andere Länder als das Eigene"
 GwLocalization["RAID_UNIT_FLAGS_TOOLTIP"] = "Zeige die Länderflaggen der Spieler neben dem Namen"
