@@ -171,6 +171,8 @@ GwLocalization["RAID_PREVIEW"] = "Preview raid frames"
 GwLocalization["RAID_PREVIEW_DESC"] = "Click to toggle raid frame preview and cycle through different group sizes."
 GwLocalization["RAID_SORT_BY_ROLE"] = "Sort raidframes by role"
 GwLocalization["RAID_SORT_BY_ROLE_DESC"] = "Sort raid unit frames by role (tank, heal, damage) instead of group."
+GwLocalization["RAID_AURA_TOOLTIP_IN_COMBAT"] = "Show aura tooltips in combat"
+GwLocalization["RAID_AURA_TOOLTIP_IN_COMBAT_DESC"] = "Show tooltips of buffs and debuffs even when you are in combat."
 GwLocalization["RAID_UNIT_FLAGS"] = "Mostra la bandiera del paese"
 GwLocalization["RAID_UNIT_FLAGS_2"] = "Diverso dal mio"
 GwLocalization["RAID_UNIT_FLAGS_TOOLTIP"] = "Mostra una bandiera del paese in base alla lingua dell'unità"
