@@ -154,6 +154,8 @@ GwLocalization["RAID_PREVIEW"] = "Preview raid frames"
 GwLocalization["RAID_PREVIEW_DESC"] = "Click to toggle raid frame preview and cycle through different group sizes."
 GwLocalization["RAID_SORT_BY_ROLE"] = "Sort raidframes by role"
 GwLocalization["RAID_SORT_BY_ROLE_DESC"] = "Sort raid unit frames by role (tank, heal, damage) instead of group."
+GwLocalization["RAID_AURA_TOOLTIP_IN_COMBAT"] = "Show aura tooltips in combat"
+GwLocalization["RAID_AURA_TOOLTIP_IN_COMBAT_DESC"] = "Show tooltips of buffs and debuffs even when you are in combat."
 GwLocalization["RAID_UNIT_FLAGS"] = "Показать флаг страны"
 GwLocalization["RAID_UNIT_FLAGS_2"] = "Другие страны, кроме своей собственной"
 GwLocalization["RAID_UNIT_FLAGS_TOOLTIP"] = "Отобразить флаги стран игроков рядом с именем"
