@@ -1,7 +1,8 @@
 5.0.22
 
 NEW
-    - Added raid aura tooltips and ignoring auras by shift+right clicking on them while not in combat
+    - Added ignoring auras by shift+right clicking on them
+    - Added option to hide raid aura tooltips (and disable ignoring by shift+right clicking) while in combat
     - Added a tooltip showing money of characters on the same faction+realm to the bag money text
 
 FIXES
